change for Java 8 compatibility